--- a/company/templates/companybase.html
+++ b/company/templates/companybase.html
@@ -3,10 +3,14 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
+        <title>{% block title %}{% endblock title %}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="">
+        {% block style %}
+        
+        {% endblock style %}
+
     </head>
     <body>
         <div id="sidebar">
@@ -31,5 +35,13 @@
                 <li><a href="">login</a></li>
             </ul>
         </div>
+        <div id="maincontent">
+            {% block main %}
+            
+            {% endblock main %}
+        </div>
+        {% block scripts %}
+        
+        {% endblock scripts %}
     </body>
 </html>
