--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -13,19 +13,19 @@
         {% csrf_token %}
         <br>
         <label for="id_fname">First Name:</label>
-        <input type="text" id="id_fname" name="fname" required />
+        <input type="text" id="id_fname" name="fname" value="{% if datapack %}{{datapack.fname}}{% endif %}" required />
         <br />
 
         <label for="id_lname">Last Name:</label>
-        <input type="text" id="id_lname" name="lname" required />
+        <input type="text" id="id_lname" name="lname" value="{% if datapack %}{{datapack.lname}}{% endif %}" required />
         <br />
 
         <label for="id_email">Email:</label>
-        <input type="email" id="id_email" name="email" required />
+        <input type="email" id="id_email" name="email" value="{% if datapack %}{{datapack.email}}{% endif %}" required />
         <br />
 
         <label for="id_phone_number">Phone Number:</label>
-        <input type="text" id="id_phone_number" name="phone_number" required />
+        <input type="text" id="id_phone_number" name="phone_number" value="{% if datapack %}{{datapack.phone_number}}{% endif %}" required />
         <br />
 
         <label for="id_password1">Password:</label>
@@ -37,6 +37,9 @@
         <br />
         <button type="submit">Register</button>
       </form>
+
+      {% include 'user/includes/messages.html' %}
+
     </div>
   </body>
 </html>
