--- a/company/templates/company/companybase.html
+++ b/company/templates/company/companybase.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+{% load static %}
+
 <html>
     <head>
         <meta charset="utf-8">
@@ -6,7 +8,6 @@
         <title>{% block title %}{% endblock title %}</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="">
         {% block style %}
         
         {% endblock style %}
