--- a/company/templates/company/companybase2.html
+++ b/company/templates/company/companybase2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="{% static 'company/companybase.css' %}">
+    <link rel="stylesheet" href="{% static 'company/companybase.css' %}">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <title>{% block title %}Official Games{% endblock title %}</title>
 </head>
@@ -51,17 +51,17 @@
             </ul>
           </li>
           
-           {% if employment.isadmin %}
+           {% if employment.isadmin %} <!-- This needs to be tested -->
             {% include 'company\includes\admindropdown.html' %}
           {% endif %}
 
           <div class="profile-details">
             <div class="profile-content">
-              <img src="profile.png" alt="profileImg">
+              <img src="{% static 'company\imgs\tempprofilepicture.jpeg' %}" alt="profile image"> <!-- This will need to change to get the users profile picture and also the default picture needs to change bc of copyright-->
             </div>
             <div class="name-job">
-              <div class="profile_name">{{employment.user.username}}</div>
-              <div class="job">{% if employment.isadmin %}Admin{% else %}Referee{% endif %}</div>
+              <div class="profile_name">{{employment.user.get_full_name}}</div>
+              <div class="job">{% if employment.isadmin %}Admin{% else %}Referee{% endif %}</div> <!-- this doesnt work yet because the we never changed isadmin for admins or staff. They are not even automatically in the company they start-->
             </div>
             <a id="logout-icon" style="color: inherit;" href='/profile/logout'><i class='bx bx-log-out' ></i></a>
           </div>
@@ -74,7 +74,9 @@
           <span class="text">{{employment.company.name}}</span>
         </div>
         <div class="main-content">
-
+            {% block main %}
+            
+            {% endblock main %}
         </div>
       </section>
       <script>
@@ -92,6 +94,9 @@
         sidebar.classList.toggle("close");
       });
       </script>
-    
+      {% block scripts %}
+        
+      {% endblock scripts %}
+
 </body>
 </html>
