profilebase for some profile pages

--- a/company/templates/company/mygames.html
+++ b/company/templates/company/mygames.html
@@ -1,4 +1,4 @@
-{% extends 'companybase.html' %}
+{% extends 'companybase2.html' %}
 {% block title %}my games{% endblock title %}
 {% block style %}{% endblock style %}
 {% block main %}
