--- a/user/templates/user/newcompany.html
+++ b/user/templates/user/newcompany.html
@@ -1,13 +1,8 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>login</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <body>
+{{% extends "profilebase.html" %}}
+
+{% block title %}Register Company{% endblock title %}
+
+{% block main %}
         <div id="newCompanyForm">
             <form method="post">
               {% csrf_token %}     
@@ -23,5 +18,4 @@
               <button type="submit">Register Company</button>
             </form>
           </div>
-    </body>
-</html>
+{% endblock main %}
