settings page and other random fixes

--- a/user/templates/user/profilebase.html
+++ b/user/templates/user/profilebase.html
@@ -52,7 +52,7 @@
               <i class='bx bxs-chevron-down arrow' ></i>
             </div>
             <ul class="sub-menu">
-              <li><a class="link_name" href="#"></a></li>
+              <li><a class="link_name" href="#">Settings</a></li>
               <li><a href="#">My Info</a></li>
               <li><a href="#">Payment Information</a></li> <!-- needs mfa -->
             </ul>
