quick html changes

--- a/user/templates/user/profilebase.html
+++ b/user/templates/user/profilebase.html
@@ -39,20 +39,20 @@
               <span class="link_name">Companies</span>
             </a>
             <ul class="sub-menu blank">
-              <li><a class="link_name" href="/profile/companies">Companies</a></li>
+              <li><a class="link_name" href="companies">Companies</a></li>
             </ul>
           </li>
           
           <li>
             <div class="iocn-link">
-              <a href="#">
+              <a href="settings">
                 <i class='bx bx-pie-chart-alt-2' ></i>
                 <span class="link_name">Settings</span>
               </a>
               <i class='bx bxs-chevron-down arrow' ></i>
             </div>
             <ul class="sub-menu">
-              <li><a class="link_name" href="#">Settings</a></li>
+              <li><a class="link_name" href="settings">Settings</a></li>
               <li><a href="#">My Info</a></li>
               <li><a href="#">Payment Information</a></li> <!-- needs mfa -->
             </ul>
@@ -60,7 +60,7 @@
 
         <div class="profile-details">
           <div class="profile-content">
-            <img src="profile.png" alt="profileImg">
+            <img src="{% static '\company\imgs\tempprofilepicture.jpeg' %}" alt="profileImg">
           </div>
           <div class="name-job">
             <div class="profile_name">Lewis Summers</div>
