--- a/company/templates/company/games.html
+++ b/company/templates/company/games.html
@@ -2,7 +2,10 @@
 {% block title %}My Games{% endblock title %}
 {% block style %}{% endblock style %}
 {% block main %}
+    <h1>This is a admin page</h1>
+    Idek
     <div>
+
         <table class="">
             <thead>
                  <tr>
