--- a/company/templates/company/includes/admindropdown.html
+++ b/company/templates/company/includes/admindropdown.html
@@ -8,7 +8,7 @@
     </div>
     <ul class="sub-menu">
       <li><a class="link_name" href="#">Admin Dashboard</a></li>
-      <li><a href="#">Officials</a></li>
+      <li><a href="/info/officials">Officials</a></li>
       <li><a href="#">Games</a></li>
       <li><a href="#">Announcements</a></li>
       <li><a href="#">Game Pay</a></li>
