--- a/user/templates/user/newcompany.html
+++ b/user/templates/user/newcompany.html
@@ -1,4 +1,4 @@
-{{% extends "profilebase.html" %}}
+{% extends "user/profilebase.html" %}
 
 {% block title %}Register Company{% endblock title %}
 
