--- a/user/templates/user/profilebase.html
+++ b/user/templates/user/profilebase.html
@@ -34,7 +34,7 @@
           </li>
 
           <li>
-            <a href="#">
+            <a href="companies">
               <i class='bx bx-football' ></i>
               <span class="link_name">Companies</span>
             </a>
@@ -63,7 +63,7 @@
             <img src="{% static '\company\imgs\tempprofilepicture.jpeg' %}" alt="profileImg">
           </div>
           <div class="name-job">
-            <div class="profile_name">Lewis Summers</div>
+            <div class="profile_name">Lewis Summers</div> <!-- needs to be chagned to the actual user-->
           </div>
           <a id="logout-icon" style="color: inherit;" href='/profile/logout'><i class='bx bx-log-out' ></i></a>
         </div>
