--- a/public/templates/public/register.html
+++ b/public/templates/public/register.html
@@ -24,9 +24,9 @@
         <input type="email" id="id_email" name="email" value="{% if datapack %}{{datapack.email}}{% endif %}" required />
         <br />
 
-        <label for='id_username'>Username:</label>
+        <!--<label for='id_username'>Username:</label>
         <input type="text" id="id_username" name="username" value="{% if datapack %}{{datapack.username}}{% endif %}" required />
-
+        -->
         <label for="id_phone_number">Phone Number:</label>
         <input type="text" id="id_phone_number" name="phone_number" value="{% if datapack %}{{datapack.phone_number}}{% endif %}" required />
         <br />
