--- a/company/templates/company/officials.html
+++ b/company/templates/company/officials.html
@@ -8,14 +8,14 @@
 <div style="padding: 20px;">
     <h1>This is a admin page - Officals</h1>
         <div>
-            <div class="search-container">
+            <div class="search-container"> <!-- We should have like a search by critera so you can search by Permissions or by name or email or whatever-->
                 <input type="text" id="search" placeholder="Search...">
             </div>
             <div class="data-table-container">
                 <table class="data-table">
                     <thead>
                          <tr>
-                             <th class='id'>ID</th>
+                             <th class='id'>ID</th> <!-- TODO this should have a link to the page with all the officals info-->
                              <th class='name'>Name</th>
                              <th class='email'>Email</th>
                              <th class='phone'>Phone Number</th>
