--- a/staticfiles/company/game.css
+++ b/staticfiles/company/game.css
@@ -1,14 +1,18 @@
-.grid-container {
+#teams-header {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    grid-auto-rows: minmax(100px, auto);
-    grid-gap: 20px;
-    padding: 20px;
+    grid-template-columns: 45% 10% 45%;
+    width: 100%;
+    justify-content: center;
+    text-align: center; /* Center the text horizontally */
+    height: 100vh; /* Optional: Adjust the height as needed */
 }
 
-.grid-item {
-    background-color: #3498db;
-    color: white;
-    text-align: center;
-    padding: 20px;
+.teams-part {
+    font-family: 'Poppins', sans-serif;
+    display: flex;
+    justify-content: center;
+}
+
+.teams-part h1 {
+    margin: 0;
 }
